<resources>
    <string name="app_name" translatable="false">H2O Managment</string>
    <string name="tab_text_1">Clients</string>
    <string name="tab_text_2">Products</string>
    <string name="tab_text_3">Orders</string>
    <string name="full_name">Full name</string>
    <string name="telefone">Telephone</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="cancelClient">Cancel new client</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="language_selected">en</string>
    <string name="language">English</string>
    <string name="removeMessage">Are you sure you want to permanently remove this client?</string>
    <string name="warning">Warning</string>
    <string name="client_updated">Client Updated</string>
    <string name="error">Error</string>
    <string name="client_added">Client Added</string>
    <string name="client_deleted">Client Removed</string>
    <string name="no_changes">Error: No changes detected</string>
    <string name="no_name">Error: Name is empty</string>
    <string name="no_phone">Error: Phone is empty</string>
    <string name="search">Search</string>
    <string name="search_client">Name (Client Only)</string>
    <string name="no_match">ERROR: No Match</string>
    <string-array name="language_option">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string name="language_select">"Language selected: "</string>
</resources>